@@ -1,6 +1,7 @@
 package com.jddi.project.errors;
 
 import jakarta.persistence.EntityNotFoundException;
+import jakarta.validation.ValidationException;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
@@ -14,20 +15,30 @@ import java.util.stream.Collectors;
 public class TratadorDeErrores {
 
     @ExceptionHandler(EntityNotFoundException.class)
-    public ResponseEntity errorDeCliente404(EntityNotFoundException e){
+    public ResponseEntity errorDeCliente404(EntityNotFoundException e) {
         return ResponseEntity.badRequest().body(e.getMessage());
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity errorValidacionDatos(MethodArgumentNotValidException e){
+    public ResponseEntity errorValidacionDatos(MethodArgumentNotValidException e) {
         List<DatosErrorValidacion> errores = e.getFieldErrors().stream()
-                .map(this::mappearDatosError).collect(Collectors.toList());
-
+                .map(this::mappearDatosError)
+                .toList();
         return ResponseEntity.badRequest().body(errores);
     }
 
+    @ExceptionHandler(ValidationException.class)
+    public ResponseEntity errorValidacion(ValidationException e) {
+        return ResponseEntity.badRequest().body(e.getMessage());
+    }
+
+    @ExceptionHandler(IllegalArgumentException.class)
+    public ResponseEntity illegalArgumentHandler(IllegalArgumentException e) {
+        return ResponseEntity.badRequest().body(e.getMessage());
+    }
+
     //Crear el DTO que se presentará al cliente
-    public DatosErrorValidacion mappearDatosError(FieldError error){
+    public DatosErrorValidacion mappearDatosError(FieldError error) {
         return new DatosErrorValidacion(error.getField(), error.getDefaultMessage());
     }
 
